# fp-haskell-itis-23-24

./: README.md
extra/: README.md  extra.cabal
extra/app/: Main.hs
extra/src/: CSVParsing.hs  EuclideanDistance.hs  PubDomain.hs  PubService.hs  RowsConversions.hs
extra/test/: Main.hs
hw1/: LICENSE  hw1.cabal
hw1/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hw1/dist-newstyle/packagedb/ghc-9.4.4/: hw1-0.1.0.0-inplace.conf  package.cache
hw1/src/: MyLib.hs
hw1/test/: Main.hs
hw2/: hw2.cabal
hw2/src/: MyLib.hs
hw2/test/: Main.hs
hw3/: hw3.cabal
hw3/src/: MyLib.hs
hw4/: CHANGELOG.md  hw4.cabal
hw4/app/: Main.hs
hw4/src/: MyLib.hs
hw5-csv-lens/: CHANGELOG.md  README.md  hw5-csv-lens.cabal  test.csv
hw5-csv-lens/app/: Main.hs
hw5-csv-lens/src/: CSVParser.hs  ParsingDataRows.hs  Songs.hs  SongsFunctions.hs  Utils.hs
hw5-csv-lens/test/: Main.hs
